--- a/module-8/css/styles.css
+++ b/module-8/css/styles.css
@@ -437,7 +437,7 @@ background-color:#000;
 		width:30px;
 		height:30px;
 		right: 0;
-		top: 10px;
+		top: 14px;
 	}
 
 }
@@ -574,6 +574,7 @@ ul .footer-mail{
 	font-size: 9px;
 	color: #fff;
 	text-align: center;
+	margin-bottom: 20px;
 }
 
 .icons li{
