--- a/module-7/css/styles.css
+++ b/module-7/css/styles.css
@@ -1042,6 +1042,8 @@ h3 {
 }
 
 .map-h2 {
+	position: relative;
+	margin-right: 105px;
 	display: flex;
 	justify-content: space-between;
 	width: 100%;
