--- a/module-5/css/styles.css
+++ b/module-5/css/styles.css
@@ -162,27 +162,36 @@ main {
     position: relative;
 }
 
-.slider a {
-    color: #222;
+.slider-move-left,
+.slider-move-right {
+    width: 45px;
+    height: 90px;
+    background: #38afe5;
+    border-radius: 100% 0 0 100% / 50% 0 0 50%;
+	position: relative;
+	left: 40px;
+	bottom: 95px;	
+    text-decoration: none;
+	padding-right: 20px;
+	padding-left: 15px;
+	padding-top: 25px;
+	padding-bottom: 25px;
 }
 
-.slider a {
-	position: relative;
-	left: 20px;
-	bottom: 35px;	
-	height: 10px;
-	width: 10px;
-    text-decoration: none;
-    background: #38afe5;
-    padding-right: 10px;
-    padding-left: 10px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    color: #fff;
-    border-radius: 15px;
-	-moz-border-radius: 15px;
-	-webkit-border-radius: 15px;
-	-khtml-border-radius: 15px;
+.slider-move-right {
+	border-radius: 0 100% 100% 0 / 0 50% 50% 0;
+}
+
+.slider-move-left::before {
+	position: absolute;
+	content: url(../img/back.png);
+	left: 15px;
+}
+
+.slider-move-right::before {
+	position: absolute;
+	content: url(../img/forward.png);
+	right: 15px;
 }
 
 .slider-fon1 {
