--- a/module-9/css/styles.css
+++ b/module-9/css/styles.css
@@ -3,7 +3,7 @@
 }
 
 body {
-	background: url('../img/background.jpg') 100% 100% no-repeat;
+	background: url('../img/background.jpg') no-repeat;
 	background-size: cover;
 	box-sizing: border-box;
 }
