--- a/module-9/css/styles.css
+++ b/module-9/css/styles.css
@@ -24,7 +24,6 @@ ul {
 ul > li {
 	position: relative;
   	right: 13px;
-  	line-height: 2.2;
 	list-style: none;	
 	font-family: 'Pathway Gothic One', sans-serif; 
 	font-size: 14px;
@@ -46,7 +45,7 @@ a {
 
 .logo_item {
 	order: -1;
-	margin-bottom: 45px;
+	margin-bottom: 30px;
 	width: 100%;
 	text-align: center;
 }
@@ -70,7 +69,6 @@ a {
 .header {
 	position: relative;	
 	margin: 0 auto;
-	padding-bottom: 45px;
 	margin-top: 70px;
 }
 
@@ -177,7 +175,7 @@ a {
 
 	.logo_item {
 		order: -1;
-		margin-bottom: 45px;
+		margin-bottom: 25px;
 		position: relative;
 	}
 
@@ -227,7 +225,7 @@ a {
 
 	.header {
 		margin-top: 115px;
-		margin-bottom: 30px;
+		margin-bottom: 40px;
 	}
 
 	.menu {
@@ -245,6 +243,7 @@ a {
 	.logo{
 		font-size: 60px;
 		left: -25px;
+		bottom: 10px;
 	}
 
 	.logo_item {
@@ -631,7 +630,7 @@ ul .footer-mail{
 
 	ul .footer-mail{
 		position: absolute;	
-		right: 15px;
+		right: 32px;
 		top: 80px;
 	}
 
@@ -686,7 +685,7 @@ ul .footer-mail{
 
 	ul .footer-mail{
 		position: absolute;	
-		right: 20px;
+		right: 37px;
 	}
 		
 }
@@ -1159,8 +1158,8 @@ p.bubble-text {
 	}
 
 	.bubble {
-	  width: 158px;
-	  height: 236px;
+	    width: 158px;
+	    height: 236px;
 	}
 
 	p.bubble-text {
@@ -1193,7 +1192,7 @@ p.bubble-text {
 
 	.content ul > li {
 	  font-size: 15px;
-
+	line-height: 2.2;
 	}
 }
 
@@ -1215,5 +1214,31 @@ p.bubble-text {
 .aside-about h4 {
 	margin-top: 8px;
 }
+
+.bubble {
+    width: 210px;
+    height: 190px;
+}
+
+.aside-about-bubble {
+	padding-right: 15px;
+}
+
+p.bubble-text {
+	width: 200px;
+}
+
+	.bubble:after {
+	  left: 93px;
+	}
+
+	.bubble:before {
+	  left: 92px;
+	}
+
+.main-about {
+	padding-top: 100px;
+}
+
 
 }
