--- a/module-10/css/styles.css
+++ b/module-10/css/styles.css
@@ -1,17 +1,19 @@
-* {
-	padding: 0;
-	margin: 0;
-}
-
 body {
 	background: url('../img/background.jpg') no-repeat;
 	background-size: cover;
+	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
 	overflow-x:hidden;
 }
 
 nav {
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
 	display: flex;
+	-webkit-box-pack: center;
+	-webkit-justify-content: center;
+	-ms-flex-pack: center;
 	justify-content: center;
 }
 
@@ -41,7 +43,10 @@ a {
 	z-index: 10;
 }
 
-.logo_item {
+.logo__item {
+	-webkit-box-ordinal-group: 0;
+	-webkit-order: -1;
+	-ms-flex-order: -1;
 	order: -1;
 	margin-bottom: 45px;
 	width: 100%;
@@ -76,9 +81,21 @@ a {
 .menu {
 	width: 46%;
 	list-style-type: none;
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
 	display: flex;
+	-webkit-box-orient: horizontal;
+	-webkit-box-direction: normal;
+	-webkit-flex-direction: row;
+	-ms-flex-direction: row;
 	flex-direction: row;
+	-webkit-box-pack: center;
+	-webkit-justify-content: center;
+	-ms-flex-pack: center;
 	justify-content: center;
+	-webkit-flex-wrap: wrap;
+	-ms-flex-wrap: wrap;
 	flex-wrap: wrap;
 }
 
@@ -86,7 +103,13 @@ a {
 	position: relative;
 	left: 15px;
 	width: 33%;	
+	display: -webkit-box;	
+	display: -webkit-flex;	
+	display: -ms-flexbox;	
 	display: flex;
+	-webkit-box-pack: start;
+	-webkit-justify-content: flex-start;
+	-ms-flex-pack: start;
 	justify-content: flex-start;
 	margin-bottom: 10px;
 }
@@ -177,7 +200,10 @@ a {
 		left: 0px;
 	}
 
-	.logo_item {
+	.logo__item {
+		-webkit-box-ordinal-group: 0;
+		-webkit-order: -1;
+		-ms-flex-order: -1;
 		order: -1;
 		margin-bottom: 45px;
 		position: relative;
@@ -239,7 +265,13 @@ a {
 
 	.menu__item {
 		width: 14%;	
+		display: -webkit-box;	
+		display: -webkit-flex;	
+		display: -ms-flexbox;	
 		display: flex;
+		-webkit-box-pack: start;
+		-webkit-justify-content: flex-start;
+		-ms-flex-pack: start;
 		justify-content: flex-start;
 		margin-bottom: 10px;
 	}
@@ -249,7 +281,10 @@ a {
 		left: -25px;
 	}
 
-	.logo_item {
+	.logo__item {
+		-webkit-box-ordinal-group: 1;
+		-webkit-order: 0;
+		-ms-flex-order: 0;
 		order: 0;
 		width: 14%;
 		text-align: center;
@@ -291,7 +326,12 @@ a {
 
 	.menu {
 		width: 100%;
+		-webkit-box-pack: justify;
+		-webkit-justify-content: space-between;
+		-ms-flex-pack: justify;
 		justify-content: space-between;
+		-webkit-flex-wrap: nowrap;
+		-ms-flex-wrap: nowrap;
 		flex-wrap: nowrap;
 	}
 }
@@ -321,9 +361,20 @@ h2{
 
 .gallery {
 	position: relative;
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
 	display: flex;
+	-webkit-box-orient: horizontal;
+	-webkit-box-direction: normal;
+	-webkit-flex-direction: row;
+	-ms-flex-direction: row;
 	flex-direction: row;
+	-webkit-flex-wrap: wrap;
+	-ms-flex-wrap: wrap;
 	flex-wrap: wrap;
+	-webkit-justify-content: space-around;
+	-ms-flex-pack: distribute;
 	justify-content: space-around;
 	margin-left: 7.7%;
 	margin-right: 7.7%;
@@ -344,27 +395,28 @@ h2{
 	height: auto;
 }
 
-.image>img {
-opacity:0.8;
--moz-opacity:0.8;
-filter: alpha(opacity=80) black;
--khtml-opacity: 0.8;
-background-color:#000;
-}
-
-.image>img:hover {
-opacity:1;
--moz-opacity:1;
-filter: alpha(opacity=100) black;
--khtml-opacity: 1;
-background-color:#000;
-}
-
-.image:hover:before {
+span.roll {
+	opacity: 1;
+	-o-transition-duration: 1s;
+	-moz-transition-duration: 1s;
+	-webkit-transition: -webkit-transform 1s;
+	background: url('../img/gallery/lupa.svg') center center no-repeat #000;
+	cursor: pointer;
+	height: 98%;
+	width: 100%;
 	position: absolute;
-	content: url(../img/gallery/lupa.png);	
-	top:100px;
-	left: 190px;
+	z-index: 10;
+	opacity: 0;
+}
+
+span.roll:hover {
+	opacity: .7;
+	-o-transition-duration: 1s;
+	-moz-transition-duration: 1s;
+	-webkit-transition: -webkit-transform 1s;
+	-webkit-box-shadow: 0px 0px 4px #000;
+	-moz-box-shadow: 0px 0px 4px #000;
+	box-shadow: 0px 0px 4px #000;
 }
 
 /*top button*/
@@ -479,7 +531,12 @@ background-color:#000;
 /** FOTTER 480 **/
 
 footer {
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
 	display: flex;
+	-webkit-align-content: center;
+	-ms-flex-line-pack: center;
 	align-content: center;
 	background-color: #30455b;
 	max-width: 480px;
@@ -489,20 +546,39 @@ footer {
 
 .footer-container {
 	width: 100%;
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
 	display: flex;
+	-webkit-box-pack: center;
+	-webkit-justify-content: center;
+	-ms-flex-pack: center;
 	justify-content: center;
 }
 
-.footer {
+.footer-list {
 	width: 64%;
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
 	display: flex;
+	-webkit-flex-wrap: wrap;
+	-ms-flex-wrap: wrap;
 	flex-wrap: wrap;	
+	-webkit-box-pack: start;	
+	-webkit-justify-content: flex-start;	
+	-ms-flex-pack: start;	
 	justify-content: flex-start;	
+	-webkit-box-align: center;	
+	-webkit-align-items: center;	
+	-ms-flex-align: center;	
 	align-items: center;	
+	-webkit-align-content: center;	
+	-ms-flex-line-pack: center;	
 	align-content: center;
 }
 
-.footer li{
+.footer-list li{
 	font-size: 11px;
 	font-family: "Open Sans", sans-serif;
 	font-weight: lighter;
@@ -513,8 +589,18 @@ footer {
 
 /* SOCIALICONS*/
 .social-footer {
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
 	display: flex;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	-webkit-flex-direction: column;
+	-ms-flex-direction: column;
 	flex-direction: column;
+	-webkit-box-pack: center;
+	-webkit-justify-content: center;
+	-ms-flex-pack: center;
 	justify-content: center;
 	margin: 0 auto;
 	padding: 0;
@@ -541,28 +627,21 @@ ul .footer-mail{
 .icons {
 	width: 100%;
 	margin: 0 auto;
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
 	display: flex;
 	padding: 0;
+	-webkit-box-pack: center;
+	-webkit-justify-content: center;
+	-ms-flex-pack: center;
 	justify-content: center;
 	margin-bottom: 20px;
 }
 
-.bg-same{
+.icons__bg-same{
     width: 27px; height: 27px;
     list-style-type: none;
-}
-
-.bg-fb{
-    background: url('../img/social-icons/480/css_sprites.png') -57px -10px;
-}
-.bg-gp {
-    background: url('../img/social-icons/480/css_sprites.png') -10px -10px;
-}
-.bg-ln {
-    background: url('../img/social-icons/480/css_sprites.png') -10px -57px;
-}
-.bg-tw {
-    background: url('../img/social-icons/480/css_sprites.png') -56px -57px;
 }
 
 .icons li {
@@ -570,7 +649,7 @@ ul .footer-mail{
 	margin-right: 5px;
 }
 
-.social-text {
+.social-footer__social-text {
 	font-family: Arial, sans-serif;
 	font-size: 9px;
 	color: #fff;
@@ -600,34 +679,21 @@ ul .footer-mail{
 		max-width: 768px;
 	}	
 
-	.social-text {
+	.social-footer__social-text {
 		font-size: 12px;
 	}
 
-	.bg-same{
+	.icons__bg-same{
 	    width: 40px; height: 40px;
 	}
 
-	.bg-fb{
-	    background: url('../img/social-icons/768/css_sprites.png') -10px -10px;;
-	}
-	.bg-gp {
-	    background: url('../img/social-icons/768/css_sprites.png') -70px -10px;;
-	}
-	.bg-ln {
-	    background: url('../img/social-icons/768/css_sprites.png') -10px -70px
-	}
-	.bg-tw {
-	    background: url('../img/social-icons/768/css_sprites.png') -70px -70px
-	}
-
-	.footer li{
+	.footer-list li{
 		font-size: 13px;
 		width: 24%;
 		text-align: center;
 	}
 
-	.footer {
+	.footer-list {
 		position: relative;	
 	}
 
@@ -659,28 +725,15 @@ ul .footer-mail{
 		max-width: 1024px;
 	}
 
-	.social-text {
+	.social-footer__social-text {
 		font-size: 12px;
 	}
 
-	.bg-same{
+	.icons__bg-same{
 	    width: 40px; height: 40px;
 	}
 
-	.bg-fb{
-	    background: url('../img/social-icons/768/css_sprites.png') -10px -10px;;
-	}
-	.bg-gp {
-	    background: url('../img/social-icons/768/css_sprites.png') -70px -10px;;
-	}
-	.bg-ln {
-	    background: url('../img/social-icons/768/css_sprites.png') -10px -70px
-	}
-	.bg-tw {
-	    background: url('../img/social-icons/768/css_sprites.png') -70px -70px
-	}
-
-	.footer li{
+	.footer-list li{
 		font-size: 13px;
 		width: 24%;
 	}
